rct_tests/tests/ui/struct_unnamed.stderr
error: rct derive macros can only supported structs named
 --> tests/ui/struct_unnamed.rs:4:1
  |
4 | struct Tests(String, f32);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
