rct_tests/tests/ui/struct_unnamed.rs
use rct::ToTable;

#[derive(ToTable)]
struct Tests(String, f32);

fn main() {}
